--- a/css/sectiondesk.css
+++ b/css/sectiondesk.css
@@ -499,6 +499,8 @@
 #bloco-comentario{
     display: flex;
     flex-wrap: wrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
     width: 100%;
     height: 380px;
     border: 1px solid rgba(0, 0, 0, 0.41);
@@ -515,6 +517,8 @@
     height: 15%;
     background-color: #175ED4;
     color: white;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 /*parte um - icone de imagem*/
 #img-users{
@@ -525,6 +529,8 @@
     height: 100%;
     font-size: 40px;
     color: white;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 /*parte um - espaço informação pessoal*/
@@ -558,15 +564,17 @@
     flex-wrap: wrap;
     word-break:break-all;
     width: 100%;
-    height: 30%;
+    height: 20%;
     padding: 10px;
-    overflow-y: auto;
+    overflow-y:visible;
+    position: relative;
 }
 /*parte dois - texto comentario*/
 #comentario-user{
     display: flex;
     margin-top: -1px;
-    font-size: 20px;
+    font-size: 17px; 
+    
 }
 
 
